// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: with props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 18,
      }
    }
  >
    Score
    :
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#E53935",
          "fontSize": 18,
        }
      }
    >
       
      0
       - 
      0
    </Text>
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Player 1
       
      played
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Player 2
       
      played
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Winner
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        Draw
      </Text>
    </Text>
  </View>
</View>
`;

exports[`renders correctly: with props number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 18,
      }
    }
  >
    Score
    :
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#E53935",
          "fontSize": 18,
        }
      }
    >
       
      0
       - 
      1
    </Text>
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Player 1
       
      played
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        PAPER
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Player 2
       
      played
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        ROCK
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      Winner
      :
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#E53935",
            "fontSize": 18,
          }
        }
      >
         
        Player 1
      </Text>
    </Text>
  </View>
</View>
`;

exports[`renders correctly: without props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 18,
      }
    }
  >
    Score
    :
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#E53935",
          "fontSize": 18,
        }
      }
    >
       
      0
       - 
      0
    </Text>
  </Text>
  <View />
</View>
`;
